Make sure scrollbar isn't always shown on code examples

--- a/src/layouts/index.css
+++ b/src/layouts/index.css
@@ -102,7 +102,7 @@ pre {
   font-size: 70%;
 
   display: inline-block;
-  overflow-x: scroll;
+  overflow-x: auto;
 
   margin: 2rem 0;
 
